@@ -1,7 +1,6 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.createbundle;
 
 import static java.util.Objects.*;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.ListUtils.emptyIfNull;
 import static uk.gov.hmcts.reform.sscs.idam.UserRole.CTSC_CLERK;
 import static uk.gov.hmcts.reform.sscs.idam.UserRole.SUPER_USER;
@@ -121,14 +120,14 @@ public class CreateBundleAboutToStartEventHandler implements PreSubmitCallbackHa
     private List<DwpDocument> getDwpEvidenceBundleDocs(SscsCaseData sscsCaseData) {
         return emptyIfNull(sscsCaseData.getDwpDocuments()).stream()
                 .filter(e -> DwpDocumentType.DWP_EVIDENCE_BUNDLE.getValue().equals(e.getValue().getDocumentType()))
-                .collect(toList());
+                .toList();
     }
 
     @NotNull
     private List<DwpDocument> getDwpResponseDocs(SscsCaseData sscsCaseData) {
         return emptyIfNull(sscsCaseData.getDwpDocuments()).stream()
                 .filter(e -> DwpDocumentType.DWP_RESPONSE.getValue().equals(e.getValue().getDocumentType()))
-                .collect(toList());
+                .toList();
     }
 
     private boolean hasMandatoryDocumentMissingForLegacyAppeals(List<DwpDocument> dwpResponseDocs) {
